<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/labelUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="@color/yellow" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="text"
        android:background="@color/white"
        android:textColor="@color/black" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userPassword"
        android:textColor="@color/yellow" />

    <EditText
        android:id="@+id/txtUserPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPassword"
        android:background="@color/white"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_marginTop="10dp"
        android:text="@string/connect"
        style="@style/KimoButton" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        style="@style/KimoButton" />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_marginTop="10dp"
        android:text="@string/forgotPassword"
        style="@style/KimoButton"  />

</LinearLayout>