<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" 
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context="${packageName}.${activityClass}" >

        <Button
            android:id="@+id/btnPlayNow"
            android:layout_gravity="top"
            android:layout_marginTop="2dp"
            android:text="@string/playNow"
            style="@style/KimoButton"/>
        
        <Button
            android:id="@+id/btnMyActiveBets"
            android:layout_gravity="top"
            android:layout_marginTop="2dp"
            android:text="@string/myActiveBets"
            style="@style/KimoButton" />
        
         <Button
            android:id="@+id/btnMyArchiveBets"
            android:layout_gravity="top"
            android:layout_marginTop="2dp"
            android:text="@string/myOldBets"
            style="@style/KimoButton" />
         
        <Button
            android:id="@+id/btnDrawHistory"
            android:layout_marginTop="2dp"
            android:text="@string/drawHistory"
            style="@style/KimoButton" />
        
        <Button
            android:id="@+id/btnUpdateAccount"
            android:layout_marginTop="2dp"
            android:text="@string/updateMyAccount"
            style="@style/KimoButton" />
    </LinearLayout>

</ScrollView>