<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chkRandomChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/randomChoice"
                android:textColor="@color/yellow" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeatedDraws"
                    android:textColor="@color/yellow" />

                <EditText
                    android:id="@+id/txtRepeatedDraws"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/one"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fromOneToTwenty"
                    android:textColor="@color/yellow" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplier"
                    android:textColor="@color/yellow" />

                <EditText
                    android:id="@+id/txtMultiplier"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/one"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fromOneToTwenty"
                    android:textColor="@color/yellow" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameType"
                    android:textColor="@color/yellow" />

                <EditText
                    android:id="@+id/txtGameType"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/one"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/fromOneToTwelve"
                    android:textColor="@color/yellow" />
            </TableRow>
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/numbers" />

        <Button
            android:id="@+id/btnBetNow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/yellow"
            android:text="@string/betNow"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>