<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
	android:layout_width="match_parent"
    android:layout_height="fill_parent" 
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context="${packageName}.${activityClass}" >

        <TextView
            android:id="@+id/labelUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="@color/yellow" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:ems="10"
            android:enabled="true"
            android:inputType="text"
            android:textColor="@color/black" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userEmail"
            android:textColor="@color/yellow" />

        <EditText
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:ems="10"
            android:enabled="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userPassword"
            android:textColor="@color/yellow" />

        <EditText
            android:id="@+id/txtUserPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:ems="10"
            android:enabled="true"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/labelRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeatPassword"
            android:textColor="@color/yellow" />

        <EditText
            android:id="@+id/txtRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:ems="10"
            android:enabled="true"
            android:inputType="textPassword"
            android:textColor="@color/black" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnUpdateAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:text="@string/updateMyAccount"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </LinearLayout>

</ScrollView>